--- a/src/WebAppDesafio.MVC/Views/Chamados/Listar.cshtml
+++ b/src/WebAppDesafio.MVC/Views/Chamados/Listar.cshtml
@@ -33,7 +33,7 @@
                     <th>@Html.DisplayNameFor(model => model.Id)</th>
                     <th>@Html.DisplayNameFor(model => model.Assunto)</th>
                     <th>@Html.DisplayNameFor(model => model.Solicitante)</th>
-                    <th>@Html.DisplayNameFor(model => model.Departamento)</th>
+                    <th>@Html.DisplayNameFor(model => model.Departamento.Descricao)</th>
                     <th>@Html.DisplayNameFor(model => model.DataAbertura)</th>
                 </tr>
             </thead>
