--- a/src/WebAppDesafio.MVC/Views/Departamentos/Listar.cshtml
+++ b/src/WebAppDesafio.MVC/Views/Departamentos/Listar.cshtml
@@ -5,7 +5,23 @@
 }
 
 <div class="row mt-3">
-    &nbsp;
+    @* <div class="col-sm-12 col-md-12 col-lg-6 no-margins text-right pt-2" style="padding: 4px 0 0 0;background-color: #f00"> *@
+    <div class="col-lg-6 text-left">
+        <button type="button" class="btn btn-outline btn-primary" id="btnRelatorio">
+            <i class="fa fa-file-pdf-o"></i> Relatório
+        </button>
+    </div>
+    <div class="col-lg-6 text-right">
+        <button type="button" class="btn btn-outline btn-primary" id="btnAdicionar">
+            <i class="fa fa-plus"></i> Adicionar
+        </button>
+        <button type="button" class="btn btn-outline btn-primary" id="btnEditar">
+            <i class="fa fa-pencil"></i> Editar
+        </button>
+        <button type="button" class="btn btn-outline btn-danger" id="btnExcluir">
+            <i class="fa fa-trash"></i> Excluir
+        </button>
+    </div>
 </div>
 
 <div class="row mt-3">
@@ -26,12 +42,12 @@
 </div>
 
 @section styles
-    {
+{
     <link rel="stylesheet" href="~/lib/sweetalert2/sweetalert2.min.css" />
 }
 
 @section scripts
-    {
+{
     <!-- SweetAlert2 -->
     <script src="~/lib/sweetalert2/sweetalert2.all.min.js"></script>
 
