ajustados os relatórios de chamados e departamentos. Arrumado um bug encontrado no auto complete de solicitantes

--- a/src/WebAppDesafio.MVC/wwwroot/reports/rptChamados.rdlc
+++ b/src/WebAppDesafio.MVC/wwwroot/reports/rptChamados.rdlc
@@ -223,7 +223,6 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -369,6 +368,7 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
+        <KeepTogether>true</KeepTogether>
         <DataSetName>dsChamados</DataSetName>
         <Top>0.28787cm</Top>
         <Height>1.2cm</Height>
